--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -88,6 +88,7 @@ psutil
 sentencepiece
 soundfile==0.13.1
 azure-ai-documentintelligence==1.0.2
+azure-search-documents
 
 pillow==11.3.0
 opencv-python-headless==4.11.0.86
