--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -87,7 +87,7 @@ psutil
 sentencepiece
 soundfile==0.13.1
 azure-ai-documentintelligence==1.0.2
-azure-search-documents
+azure-search-documents==11.6.0b12
 azure-core
 
 pillow==11.3.0
